# Django-PasswordGenerator

./: manage.py  passgen.py  pyproject.toml
PasswardGenerator/: asgi.py  settings.py  urls.py  wsgi.py
passgen/: views.py
passgen/static/passgen/: script.js  style.css
templates/passgen/: home.html
