[tool.poetry]
name = "django-passwordgenerator"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]  # TODO: change to yours

[tool.poetry.dependencies]
python = "^3.7"
asgiref = "3.2.7"
Django = "3.0.7"
pytz = "2020.1"
sqlparse = "0.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
